# spork

./: Cargo.toml  agent_capabilities.json  config.json
Payload_Type/spork/: Dockerfile
Payload_Type/spork/spork/agent_code/src/: keylogger.rs  network-configuration.txt  network.rs
Payload_Type/spork/spork/mythic/agent_functions/: builder.py
spork/Payload_Type/spork/: main.py
spork/Payload_Type/spork/spork/agent_code/: README.md
spork/Payload_Type/spork/spork/agent_code/src/: cmdexec.rs
src/: main.rs  network.rs  processlist.rs
